--- a/GREENGLOW-main (2)/GREENGLOW-main/GREENGLOW/Soundarya-main/adminpage.css
+++ b/GREENGLOW-main (2)/GREENGLOW-main/GREENGLOW/Soundarya-main/adminpage.css
@@ -156,7 +156,7 @@ body {
   nav a {
     display: block;
     padding: 0 10px;
-    color: #c8c5c5;
+    color: #555151;
     font-size: 15px;
     line-height: 60px;
     text-decoration: none;
