--- a/GREENGLOW-main (2)/GREENGLOW-main/GREENGLOW/Soundarya-main/billfinal.css
+++ b/GREENGLOW-main (2)/GREENGLOW-main/GREENGLOW/Soundarya-main/billfinal.css
@@ -142,7 +142,7 @@ body {
   nav ul li {
     display: inline-block;
     background-color: white;
-  
+  }
   #nav-btn>div>i {
   font-size: 16px;
   color: #217142;
