--- a/GREENGLOW-main (2)/GREENGLOW-main/GREENGLOW/Soundarya-main/billfinal.css
+++ b/GREENGLOW-main (2)/GREENGLOW-main/GREENGLOW/Soundarya-main/billfinal.css
@@ -154,7 +154,7 @@ body {
   nav a {
     display: block;
     padding: 0 10px;
-    color: #c8c5c5;
+    color: #555151;
     font-size: 13px;
     line-height: 60px;
     text-decoration: none;
