--- a/GREENGLOW-main (2)/GREENGLOW-main/GREENGLOW/Soundarya-main/login.css
+++ b/GREENGLOW-main (2)/GREENGLOW-main/GREENGLOW/Soundarya-main/login.css
@@ -63,7 +63,9 @@ body {
   
   #logo {
     padding: 10px 0px 0px 55%;
-    width: 23%;
+    width: 25%;
+    height: 85px;
+
   }
   
   
@@ -149,7 +151,7 @@ body {
   nav a {
     display: block;
     padding: 0 10px;
-    color: #c8c5c5;
+    color: #555151;
     font-size: 15px;
     line-height: 60px;
     text-decoration: none;
