--- a/GREENGLOW-main (2)/GREENGLOW-main/GREENGLOW/Soundarya-main/products.css
+++ b/GREENGLOW-main (2)/GREENGLOW-main/GREENGLOW/Soundarya-main/products.css
@@ -45,7 +45,7 @@ body {
   }
   
   #main {
-    height: 80px;
+    height: 100px;
     display: flex;
     background-color: white;
     border-bottom: 3px solid #c3d3b1;
@@ -63,7 +63,8 @@ body {
   
   #logo {
     padding: 10px 0px 0px 55%;
-    width: 23%;
+    width: 25%;
+    height: 85px;
   }
   
   
@@ -156,7 +157,7 @@ body {
   nav a {
     display: block;
     padding: 0 10px;
-    color: #c8c5c5;
+    color: #555151;
     font-size: 15px;
     line-height: 60px;
     text-decoration: none;
